--- a/index.html
+++ b/index.html
@@ -1,27 +1,138 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <title>&lt;model-viewer&gt; template</title>
-    <meta charset="utf-8">
-    <meta name="description" content="&lt;model-viewer&gt; template">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link type="text/css" href="./styles.css" rel="stylesheet"/>
-  </head>
-  <body>
-    <!-- <model-viewer> HTML element -->
-    <model-viewer src="https://github.com/oitaox-star/oitaox-star.github.io/blob/17b8a88ab4bf2fbf7f535f29583900b3185329d1/modelsobject01.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="neutral" poster="poster.webp" shadow-intensity="1">
-      <div class="progress-bar hide" slot="progress-bar">
-          <div class="update-bar"></div>
-      </div>
-      <button slot="ar-button" id="ar-button">
-          View in your space
-      </button>
-      <div id="ar-prompt">
-          <img src="ar_hand_prompt.png">
-      </div>
-    </model-viewer>  
-    <script src="script.js"></script>
-    <!-- Loads <model-viewer> for browsers: -->
-    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>GLB AR Viewer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- model-viewer 本体（CDN）-->
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+
+  <style>
+    :root {
+      color-scheme: dark;
+    }
+    * { box-sizing: border-box; }
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background: radial-gradient(circle at top, #222 0, #050509 55%);
+      color: #f5f5f5;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+    header {
+      padding: 0.8rem 1rem;
+      font-size: 0.95rem;
+      text-align: center;
+      background: #000000aa;
+      backdrop-filter: blur(10px);
+      border-bottom: 1px solid #ffffff22;
+    }
+    main {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 1rem;
+      gap: 0.75rem;
+    }
+    model-viewer {
+      width: 100%;
+      max-width: 640px;
+      height: min(70vh, 480px);
+      border-radius: 16px;
+      overflow: hidden;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.5);
+      background: #111;
+    }
+    .info {
+      max-width: 640px;
+      width: 100%;
+      font-size: 0.85rem;
+      line-height: 1.6;
+      color: #ddd;
+    }
+    .info strong {
+      color: #ffd769;
+    }
+    .badge-row {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.4rem;
+      margin-bottom: 0.4rem;
+    }
+    .badge {
+      padding: 0.2rem 0.6rem;
+      border-radius: 999px;
+      border: 1px solid #ffffff33;
+      font-size: 0.7rem;
+      text-transform: uppercase;
+      letter-spacing: .06em;
+      opacity: .9;
+    }
+    footer {
+      text-align: center;
+      font-size: 0.75rem;
+      padding: 0.5rem 1rem 0.8rem;
+      color: #aaa;
+    }
+  </style>
+</head>
+<body>
+
+<header>
+  <div>GLB / USDZ AR Viewer — <span style="opacity:.7;">Powered by &lt;model-viewer&gt;</span></div>
+</header>
+
+<main>
+  <!-- 3D表示 + ARボタン付きの model-viewer 本体 -->
+  <model-viewer id="viewer"
+    src="model.glb"               <!-- GLBファイル -->
+    ios-src="model.usdz"          <!-- iOS向けAR（あれば）-->
+    alt="3Dモデル"
+    ar                           <!-- AR有効化 -->
+    ar-modes="webxr scene-viewer quick-look"
+    ar-scale="fixed"             <!-- 実寸 or 固定スケール。必要に応じて "auto" などに変更 -->
+    camera-controls              <!-- ドラッグで回転・ピンチでズーム -->
+    auto-rotate                  <!-- 自動回転 -->
+    interaction-prompt="auto"
+    shadow-intensity="1"
+    environment-image="neutral"  <!-- 環境光。別HDRに変えてもOK -->
+    exposure="1.1"
+    touch-action="pan-y">
+  </model-viewer>
+
+  <section class="info">
+    <div class="badge-row">
+      <span class="badge">3D</span>
+      <span class="badge">AR</span>
+      <span class="badge">GLB / USDZ</span>
+      <span class="badge">Mobile ready</span>
+    </div>
+
+    <p>
+      画面を<strong>ドラッグ</strong>してモデルを回転、<strong>ピンチ</strong>で拡大縮小できます。<br>
+      対応ブラウザでは、右下に表示される<strong>「AR」ボタン</strong>から実空間へ配置できます。
+    </p>
+    <p>
+      <strong>iPhone / iPad（Safari）</strong>：
+      <br>・<code>ios-src="model.usdz"</code> を指定している場合、
+      ARボタンから「AR Quick Look」で表示されます。<br>
+      ・GitHub Pages など <strong>HTTPS</strong> で公開している必要があります。
+    </p>
+    <p>
+      <strong>Android（Chrome）</strong>：<br>
+      Scene Viewer が起動し、現実空間にモデルを配置できます。
+    </p>
+  </section>
+</main>
+
+<footer>
+  Push this folder to GitHub, enable GitHub Pages, then open the URL on your phone.
+</footer>
+
+</body>
 </html>
