--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebAR - Gesture Control</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>WebAR Gesture Viewer</title>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <script src="https://raw.githack.com/fcor/aframe-gesture-detector/master/dist/aframe-gesture-detector.min.js"></script>
@@ -15,8 +15,9 @@
     <a-scene 
         embedded 
         arjs="sourceType: webcam; debugUIEnabled: false;"
-        renderer="logarithmicDepthBuffer: true;"
-        gesture-detector>
+        renderer="logarithmicDepthBuffer: true; colorManagement: true;"
+        gesture-detector
+        id="scene">
 
         <a-assets>
             <a-asset-item id="target-model" src="assets/model.glb"></a-asset-item>
@@ -29,6 +30,8 @@
             emitevents="true"
             cursor="fuse: false; rayOrigin: mouse;">
             
+            <a-box position="0 0.5 0" material="opacity: 0.5; color: red;" scale="0.2 0.2 0.2"></a-box>
+
             <a-entity 
                 id="model-entity"
                 gltf-model="#target-model" 
