--- a/index.html
+++ b/index.html
@@ -2,46 +2,27 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>WebAR Gesture Viewer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WebAR GLB Viewer</title>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-    <script src="https://raw.githack.com/fcor/aframe-gesture-detector/master/dist/aframe-gesture-detector.min.js"></script>
-    <script src="https://raw.githack.com/fcor/aframe-gesture-handler/master/dist/gesture-handler.min.js"></script>
 </head>
 
 <body style="margin: 0; overflow: hidden;">
 
-    <a-scene 
-        embedded 
-        arjs="sourceType: webcam; debugUIEnabled: false;"
-        renderer="logarithmicDepthBuffer: true; colorManagement: true;"
-        gesture-detector
-        id="scene">
-
+    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
+        
         <a-assets>
-            <a-asset-item id="target-model" src="assets/model.glb"></a-asset-item>
-        </a-assets>
+            <a-asset-item id="my-model" src="path/to/your/model.glb"></a-asset-item>
+        </assets>
 
-        <a-marker 
-            type="pattern" 
-            url="assets/marker.patt"
-            raycaster="objects: .clickable"
-            emitevents="true"
-            cursor="fuse: false; rayOrigin: mouse;">
-            
-            <a-box position="0 0.5 0" material="opacity: 0.5; color: red;" scale="0.2 0.2 0.2"></a-box>
-
+        <a-marker preset="hiro">
             <a-entity 
-                id="model-entity"
-                gltf-model="#target-model" 
-                scale="1 1 1" 
-                position="0 0 0" 
-                rotation="0 0 0"
-                class="clickable"
-                gesture-handler>
+                gltf-model="#my-model" 
+                scale="0.5 0.5 0.5" 
+                position="0 0 0"
+                rotation="0 0 0">
             </a-entity>
-
         </a-marker>
 
         <a-entity camera></a-entity>
