--- a/index.html
+++ b/index.html
@@ -3,26 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebAR GLB Viewer</title>
+    <title>WebAR - File Swap Version</title>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
 
 <body style="margin: 0; overflow: hidden;">
 
-    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-        
-        <a-assets>
-            <a-asset-item id="my-model" src="path/to/your/model.glb"></a-asset-item>
-        </assets>
+    <a-scene 
+        embedded 
+        arjs="sourceType: webcam; debugUIEnabled: false;"
+        renderer="logarithmicDepthBuffer: true;">
 
-        <a-marker preset="hiro">
+        <a-assets>
+            <a-asset-item id="target-model" src="assets/model.glb"></a-asset-item>
+        </a-assets>
+
+        <a-marker type="pattern" url="assets/marker.patt">
+            
             <a-entity 
-                gltf-model="#my-model" 
-                scale="0.5 0.5 0.5" 
-                position="0 0 0"
+                gltf-model="#target-model" 
+                scale="1 1 1" 
+                position="0 0 0" 
                 rotation="0 0 0">
             </a-entity>
+
         </a-marker>
 
         <a-entity camera></a-entity>
