--- a/index.html
+++ b/index.html
@@ -1,116 +1,102 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebAR - File Swap Version</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WebAR (Marker) + Touch Rotate/Scale</title>
 
-    <!-- A-Frame 本体 -->
-    <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
+  <!-- A-Frame -->
+  <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
 
-    <!-- AR.js for A-Frame -->
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+  <!-- AR.js for A-Frame -->
+  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 
-    <!-- gesture-detector コンポーネント -->
-    <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-gesture-detector-component@master/dist/aframe-gesture-detector-component.min.js"></script>
+  <!-- Gesture detector (touch drag / pinch) -->
+  <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-gesture-detector-component@master/dist/aframe-gesture-detector-component.min.js"></script>
 
-    <!-- 回転・拡大縮小用コンポーネント -->
-    <script>
-      AFRAME.registerComponent('gesture-handler', {
-        schema: {
-          minScale: {default: 0.3},
-          maxScale: {default: 3.0}
-        },
+  <script>
+    // 1本指ドラッグ: 回転 / 2本指ピンチ: 拡大縮小
+    AFRAME.registerComponent('gesture-handler', {
+      schema: {
+        minScale: { default: 0.3 },
+        maxScale: { default: 3.0 },
+        rotSpeed: { default: 0.01 },  // 回転の感度
+        scaleSpeed: { default: 0.005 } // 拡縮の感度
+      },
 
-        init: function () {
-          const el = this.el;
+      init: function () {
+        const el = this.el;
 
-          this.internalState = {
-            rotation: {
-              x: el.object3D.rotation.x,
-              y: el.object3D.rotation.y
-            },
-            scale: el.object3D.scale.x || 1
-          };
+        this.state = {
+          rotX: el.object3D.rotation.x,
+          rotY: el.object3D.rotation.y,
+          scale: el.object3D.scale.x || 1
+        };
 
-          this.handleOneFingerMove = this.handleOneFingerMove.bind(this);
-          this.handleTwoFingerMove = this.handleTwoFingerMove.bind(this);
+        this.onOneFingerMove = this.onOneFingerMove.bind(this);
+        this.onTwoFingerMove = this.onTwoFingerMove.bind(this);
 
-          // シーン全体のジェスチャーを監視
-          el.sceneEl.addEventListener('onefingermove', this.handleOneFingerMove);
-          el.sceneEl.addEventListener('twofingermove', this.handleTwoFingerMove);
-        },
+        // シーンが gesture-detector を持っている前提でイベントを受ける
+        el.sceneEl.addEventListener('onefingermove', this.onOneFingerMove);
+        el.sceneEl.addEventListener('twofingermove', this.onTwoFingerMove);
+      },
 
-        remove: function () {
-          this.el.sceneEl.removeEventListener('onefingermove', this.handleOneFingerMove);
-          this.el.sceneEl.removeEventListener('twofingermove', this.handleTwoFingerMove);
-        },
+      remove: function () {
+        this.el.sceneEl.removeEventListener('onefingermove', this.onOneFingerMove);
+        this.el.sceneEl.removeEventListener('twofingermove', this.onTwoFingerMove);
+      },
 
-        // 1本指ドラッグ：回転
-        handleOneFingerMove: function (event) {
-          // マーカーが外れているときは無視
-          if (!this.el.object3D.visible) return;
+      onOneFingerMove: function (e) {
+        // マーカー未検出中は触っても動かさない
+        if (!this.el.object3D.visible) return;
 
-          const d = event.detail.positionChange; // {x, y} ピクセル変化量
+        const d = e.detail.positionChange; // {x, y}
+        this.state.rotY += d.x * this.data.rotSpeed;
+        this.state.rotX += d.y * this.data.rotSpeed;
 
-          this.internalState.rotation.y += d.x * 0.01; // 左右ドラッグでY軸回転
-          this.internalState.rotation.x += d.y * 0.01; // 上下ドラッグでX軸回転
+        this.el.object3D.rotation.set(this.state.rotX, this.state.rotY, 0);
+      },
 
-          this.el.object3D.rotation.set(
-            this.internalState.rotation.x,
-            this.internalState.rotation.y,
-            0
-          );
-        },
+      onTwoFingerMove: function (e) {
+        if (!this.el.object3D.visible) return;
 
-        // 2本指ピンチ：拡大縮小
-        handleTwoFingerMove: function (event) {
-          if (!this.el.object3D.visible) return;
+        const spreadChange = e.detail.spreadChange;
+        this.state.scale += spreadChange * this.data.scaleSpeed;
 
-          const spreadChange = event.detail.spreadChange; // 2本指の距離変化
+        // 範囲制限
+        this.state.scale = Math.min(this.data.maxScale, Math.max(this.data.minScale, this.state.scale));
 
-          this.internalState.scale += spreadChange * 0.005;
-          this.internalState.scale = Math.min(
-            this.data.maxScale,
-            Math.max(this.data.minScale, this.internalState.scale)
-          );
-
-          this.el.object3D.scale.set(
-            this.internalState.scale,
-            this.internalState.scale,
-            this.internalState.scale
-          );
-        }
-      });
-    </script>
+        this.el.object3D.scale.set(this.state.scale, this.state.scale, this.state.scale);
+      }
+    });
+  </script>
 </head>
 
-<body style="margin: 0; overflow: hidden;">
+<body style="margin:0; overflow:hidden;">
+  <a-scene
+    embedded
+    renderer="logarithmicDepthBuffer: true;"
+    arjs="sourceType: webcam; debugUIEnabled: false;"
+    gesture-detector
+  >
+    <a-assets>
+      <!-- フォルダ構造に合わせて固定 -->
+      <a-asset-item id="model-asset" src="assets/model.glb"></a-asset-item>
+    </a-assets>
 
-    <a-scene
-        embedded
-        arjs="sourceType: webcam; debugUIEnabled: false;"
-        renderer="logarithmicDepthBuffer: true;"
-        gesture-detector> <!-- ← ジェスチャー検出を有効化 -->
+    <!-- フォルダ構造に合わせて固定 -->
+    <a-marker type="pattern" url="assets/marker.patt">
+      <a-entity
+        id="model"
+        gltf-model="#model-asset"
+        position="0 0 0"
+        rotation="0 0 0"
+        scale="1 1 1"
+        gesture-handler
+      ></a-entity>
+    </a-marker>
 
-        <a-assets>
-            <a-asset-item id="target-model" src="assets/model.glb"></a-asset-item>
-        </a-assets>
-
-        <a-marker type="pattern" url="assets/marker.patt">
-            <a-entity
-                id="model"
-                gltf-model="#target-model"
-                scale="1 1 1"
-                position="0 0 0"
-                rotation="0 0 0"
-                gesture-handler> <!-- ← ここで回転＆拡大縮小を有効化 -->
-            </a-entity>
-        </a-marker>
-
-        <a-entity camera></a-entity>
-
-    </a-scene>
-
+    <a-entity camera></a-entity>
+  </a-scene>
 </body>
 </html>
