--- a/index.html
+++ b/index.html
@@ -3,89 +3,98 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WebAR (Marker) + Touch Rotate/Scale</title>
+  <title>WebAR (Pattern) + Touch</title>
 
-  <!-- A-Frame -->
-  <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
-
-  <!-- AR.js for A-Frame -->
+  <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-
-  <!-- Gesture detector (touch drag / pinch) -->
   <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-gesture-detector-component@master/dist/aframe-gesture-detector-component.min.js"></script>
 
+  <style>
+    .loader{
+      position:fixed; inset:0; display:flex; align-items:center; justify-content:center;
+      background:#000c; color:#fff; font-family:system-ui; z-index:9999;
+    }
+  </style>
+
   <script>
-    // 1本指ドラッグ: 回転 / 2本指ピンチ: 拡大縮小
     AFRAME.registerComponent('gesture-handler', {
       schema: {
         minScale: { default: 0.3 },
         maxScale: { default: 3.0 },
-        rotSpeed: { default: 0.01 },  // 回転の感度
-        scaleSpeed: { default: 0.005 } // 拡縮の感度
+        rotSpeed: { default: 0.01 },
+        scaleSpeed: { default: 0.005 }
       },
-
       init: function () {
         const el = this.el;
-
         this.state = {
           rotX: el.object3D.rotation.x,
           rotY: el.object3D.rotation.y,
           scale: el.object3D.scale.x || 1
         };
-
         this.onOneFingerMove = this.onOneFingerMove.bind(this);
         this.onTwoFingerMove = this.onTwoFingerMove.bind(this);
-
-        // シーンが gesture-detector を持っている前提でイベントを受ける
         el.sceneEl.addEventListener('onefingermove', this.onOneFingerMove);
         el.sceneEl.addEventListener('twofingermove', this.onTwoFingerMove);
       },
-
       remove: function () {
         this.el.sceneEl.removeEventListener('onefingermove', this.onOneFingerMove);
         this.el.sceneEl.removeEventListener('twofingermove', this.onTwoFingerMove);
       },
-
       onOneFingerMove: function (e) {
-        // マーカー未検出中は触っても動かさない
         if (!this.el.object3D.visible) return;
-
-        const d = e.detail.positionChange; // {x, y}
+        const d = e.detail.positionChange;
         this.state.rotY += d.x * this.data.rotSpeed;
         this.state.rotX += d.y * this.data.rotSpeed;
-
         this.el.object3D.rotation.set(this.state.rotX, this.state.rotY, 0);
       },
-
       onTwoFingerMove: function (e) {
         if (!this.el.object3D.visible) return;
-
         const spreadChange = e.detail.spreadChange;
         this.state.scale += spreadChange * this.data.scaleSpeed;
-
-        // 範囲制限
         this.state.scale = Math.min(this.data.maxScale, Math.max(this.data.minScale, this.state.scale));
-
         this.el.object3D.scale.set(this.state.scale, this.state.scale, this.state.scale);
       }
+    });
+
+    // デバッグ：マーカー検出イベントを表示
+    window.addEventListener('DOMContentLoaded', () => {
+      const loader = document.getElementById('loader');
+      const marker = document.getElementById('marker');
+      marker.addEventListener('markerFound', () => {
+        console.log('markerFound');
+        loader.style.display = 'none';
+      });
+      marker.addEventListener('markerLost', () => {
+        console.log('markerLost');
+      });
+
+      // モデル読み込み失敗を拾う
+      const model = document.getElementById('model');
+      model.addEventListener('model-error', (e) => console.error('model-error', e));
+      model.addEventListener('model-loaded', () => console.log('model-loaded'));
     });
   </script>
 </head>
 
 <body style="margin:0; overflow:hidden;">
+  <div id="loader" class="loader">Loading…（カメラ許可→マーカーを映してください）</div>
+
   <a-scene
     embedded
-    renderer="logarithmicDepthBuffer: true;"
-    arjs="sourceType: webcam; debugUIEnabled: false;"
     gesture-detector
+    vr-mode-ui="enabled: false"
+    renderer="logarithmicDepthBuffer: true; precision: medium;"
+    arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: true;"
   >
     <a-assets>
-      <!-- フォルダ構造に合わせて固定 -->
       <a-asset-item id="model-asset" src="assets/model.glb"></a-asset-item>
     </a-assets>
 
-    <!-- フォルダ構造に合わせて固定 -->
-    <a-marker type="pattern" url="assets/marker.patt">
+    <a-marker id="marker" type="pattern" url="assets/marker.patt" emitevents="true">
+      <!-- ライト追加（見えない対策） -->
+      <a-entity light="type: ambient; intensity: 1.0"></a-entity>
+      <a-entity light="type: directional; intensity: 0.8" position="1 2 1"></a-entity>
+
       <a-entity
         id="model"
         gltf-model="#model-asset"
