--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>WebAR + UI (Scale/Rotate/Animation)</title>
+  <title>WebAR + Bottom UI (Toggle)</title>
 
   <!-- A-Frame -->
   <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
@@ -14,20 +14,70 @@
 
   <style>
     body{margin:0; overflow:hidden; font-family:system-ui, -apple-system, "Noto Sans JP", sans-serif;}
+
+    /* ローディング */
+    .loader{
+      position:fixed; inset:0; display:flex; align-items:center; justify-content:center;
+      background:#000c; color:#fff; z-index:9998;
+      font-size:14px;
+    }
+
+    /* UIトグルボタン（右下） */
+    .ui-toggle{
+      position:fixed; right:10px; bottom:10px;
+      z-index:10000;
+      border:1px solid rgba(255,255,255,.22);
+      background: rgba(0,0,0,.45);
+      color:#fff;
+      border-radius: 999px;
+      padding: 10px 12px;
+      font-size:12px;
+      backdrop-filter: blur(8px);
+      cursor:pointer;
+      user-select:none;
+    }
+    .ui-toggle:active{transform: translateY(1px);}
+
+    /* 下部UI（コンパクト） */
     .ui {
-      position: fixed; left: 10px; top: 10px; z-index: 9999;
-      width: min(360px, calc(100vw - 20px));
+      position: fixed; left: 10px; right: 10px; bottom: 60px;
+      z-index: 9999;
+      max-width: 520px; /* PCでも広がりすぎない */
+      margin: 0 auto;
+
       background: rgba(0,0,0,.55);
       color: #fff;
       border: 1px solid rgba(255,255,255,.18);
-      border-radius: 14px;
+      border-radius: 16px;
       padding: 10px 12px;
       backdrop-filter: blur(8px);
     }
-    .ui h2{font-size:14px; margin:0 0 8px; font-weight:700;}
-    .row{display:flex; gap:8px; align-items:center; margin:8px 0;}
-    .row label{font-size:12px; opacity:.9; width:86px; flex:0 0 86px;}
+
+    .ui.hidden{display:none;}
+
+    .ui-head{
+      display:flex; align-items:center; justify-content:space-between;
+      gap:10px; margin-bottom:8px;
+    }
+    .ui h2{font-size:13px; margin:0; font-weight:700;}
+    .badge{
+      display:inline-block; font-size:11px; padding:2px 8px; border-radius:999px;
+      border:1px solid rgba(255,255,255,.22); background: rgba(255,255,255,.10);
+    }
+
+    .row{display:flex; gap:8px; align-items:center; margin:6px 0;}
+    .row label{font-size:11px; opacity:.9; width:70px; flex:0 0 70px;}
     .row input[type="range"]{flex:1}
+
+    .grid{
+      display:grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 6px 10px;
+    }
+    @media (max-width: 420px){
+      .grid{grid-template-columns: 1fr;}
+    }
+
     .btns{display:flex; gap:8px; flex-wrap:wrap; margin-top:8px;}
     button{
       appearance:none; border:1px solid rgba(255,255,255,.22);
@@ -42,24 +92,11 @@
       background: rgba(0,0,0,.25); color:#fff;
       outline:none;
     }
-    .hint{font-size:11px; opacity:.8; line-height:1.4; margin-top:6px;}
-    .badge{
-      display:inline-block; font-size:11px; padding:2px 8px; border-radius:999px;
-      border:1px solid rgba(255,255,255,.22); background: rgba(255,255,255,.10);
-      margin-left:6px;
-    }
-    .loader{
-      position:fixed; inset:0; display:flex; align-items:center; justify-content:center;
-      background:#000c; color:#fff; z-index:9998;
-      font-size:14px;
-    }
+    .hint{font-size:11px; opacity:.8; line-height:1.35; margin-top:6px;}
   </style>
 
   <script>
-    /**
-     * 既存のタッチ操作(ドラッグ回転/ピンチ拡大縮小)を維持
-     * UI操作とぶつかりにくいように、UI上でのタッチは A-Frame 側に流れないようにする（後述）
-     */
+    // タッチ操作：ドラッグ回転 / ピンチ拡大縮小
     AFRAME.registerComponent('gesture-handler', {
       schema: {
         minScale: { default: 0.3 },
@@ -76,7 +113,6 @@
         };
         this.onOneFingerMove = this.onOneFingerMove.bind(this);
         this.onTwoFingerMove = this.onTwoFingerMove.bind(this);
-
         el.sceneEl.addEventListener('onefingermove', this.onOneFingerMove);
         el.sceneEl.addEventListener('twofingermove', this.onTwoFingerMove);
       },
@@ -100,17 +136,8 @@
       }
     });
 
-    /**
-     * UIからモデルを制御するコンポーネント
-     * - scale / rotation / auto-rotate
-     * - glTF animation (Mixer)
-     * - animation clip select / play/pause / speed
-     */
+    // UIでモデルを制御（サイズ/回転/自動回転/アニメ）
     AFRAME.registerComponent('model-ui-controller', {
-      schema: {
-        minScale: { default: 0.1 },
-        maxScale: { default: 5.0 }
-      },
       init: function () {
         this.mixer = null;
         this.activeAction = null;
@@ -120,7 +147,6 @@
         this.speed = 1.0;
         this.autoRotate = false;
 
-        // 初期値
         const obj = this.el.object3D;
         this.base = {
           scale: obj.scale.x || 1,
@@ -129,8 +155,10 @@
           rotZ: obj.rotation.z
         };
 
-        // UI参照
         this.ui = {
+          root: document.getElementById('ui'),
+          toggleBtn: document.getElementById('ui-toggle'),
+
           scale: document.getElementById('ui-scale'),
           rotY: document.getElementById('ui-roty'),
           rotX: document.getElementById('ui-rotx'),
@@ -142,13 +170,25 @@
           animPlay: document.getElementById('ui-anim-play'),
           animStop: document.getElementById('ui-anim-stop'),
           animSpeed: document.getElementById('ui-anim-speed'),
+          animSpeedVal: document.getElementById('ui-anim-speed-val'),
           animStatus: document.getElementById('ui-anim-status'),
           animWrap: document.getElementById('ui-anim-wrap')
         };
 
-        // イベント：モデル読み込み
+        // UIタッチがAR操作に伝播しないようにする
+        ['touchstart','touchmove','touchend','pointerdown','pointermove','pointerup'].forEach(ev=>{
+          this.ui.root.addEventListener(ev, (e)=> e.stopPropagation(), {passive:false});
+        });
+
+        // UI表示/非表示（右下ボタン）
+        this.ui.toggleBtn.addEventListener('click', () => {
+          const hidden = this.ui.root.classList.toggle('hidden');
+          this.ui.toggleBtn.textContent = hidden ? '操作UIを表示' : '操作UIを隠す';
+        });
+
+        // モデル読み込み
         this.el.addEventListener('model-loaded', (e) => {
-          const mesh = e.detail.model; // THREE.Object3D
+          const mesh = e.detail.model;
           this._setupAnimations(mesh);
           this._syncUIFromModel();
           document.getElementById('loader').style.display = 'none';
@@ -156,47 +196,34 @@
 
         this.el.addEventListener('model-error', (e) => {
           console.error('model-error', e);
-          alert('model.glb の読み込みに失敗しました。パスやファイル破損を確認してください。');
+          alert('model.glb の読み込みに失敗しました。assets/model.glb を確認してください。');
         });
 
-        // UIイベント
         this._bindUI();
       },
 
       tick: function () {
-        // auto-rotate（マーカー見えてる時のみ）
         if (this.autoRotate && this.el.object3D.visible) {
           this.el.object3D.rotation.y += 0.01;
-          // UI側も追従させる（重くならないように小数は丸め）
-          if (this.ui.rotY) this.ui.rotY.value = (this.el.object3D.rotation.y).toFixed(3);
+          this.ui.rotY.value = this.el.object3D.rotation.y.toFixed(3);
         }
 
-        // animation update
         if (this.mixer && this.isPlaying && this.el.object3D.visible) {
           const dt = this.clock.getDelta();
           this.mixer.update(dt * this.speed);
         } else {
-          // マーカー外れ中にclockが進みすぎないように
           this.clock.getDelta();
         }
       },
 
       _bindUI: function () {
-        const clamp = (v, min, max) => Math.min(max, Math.max(min, v));
-
-        // UI上のタッチがAR操作に伝播しないように止める
-        const uiRoot = document.getElementById('ui');
-        ['touchstart','touchmove','touchend','pointerdown','pointermove','pointerup'].forEach(ev=>{
-          uiRoot.addEventListener(ev, (e)=> e.stopPropagation(), {passive:false});
-        });
-
         // Scale
         this.ui.scale.addEventListener('input', () => {
-          const s = clamp(parseFloat(this.ui.scale.value), this.data.minScale, this.data.maxScale);
+          const s = parseFloat(this.ui.scale.value);
           this.el.object3D.scale.set(s,s,s);
         });
 
-        // Rotation sliders
+        // Rotation
         this.ui.rotX.addEventListener('input', () => this.el.object3D.rotation.x = parseFloat(this.ui.rotX.value));
         this.ui.rotY.addEventListener('input', () => this.el.object3D.rotation.y = parseFloat(this.ui.rotY.value));
         this.ui.rotZ.addEventListener('input', () => this.el.object3D.rotation.z = parseFloat(this.ui.rotZ.value));
@@ -216,10 +243,10 @@
         // Animation select
         this.ui.animSelect.addEventListener('change', () => {
           const idx = parseInt(this.ui.animSelect.value, 10);
-          this._playClipByIndex(idx);
+          this._playClipByIndex(idx, true);
         });
 
-        // Play / Pause
+        // Play
         this.ui.animPlay.addEventListener('click', () => {
           if (!this.mixer || !this.activeAction) return;
           this.isPlaying = true;
@@ -228,12 +255,11 @@
           this._setAnimStatus('再生中');
         });
 
-        // Stop (reset to start)
+        // Stop
         this.ui.animStop.addEventListener('click', () => {
           if (!this.mixer || !this.activeAction) return;
           this.isPlaying = false;
           this.activeAction.stop();
-          // 先頭フレームへ
           this.mixer.setTime(0);
           this._setAnimStatus('停止');
         });
@@ -241,7 +267,7 @@
         // Speed
         this.ui.animSpeed.addEventListener('input', () => {
           this.speed = parseFloat(this.ui.animSpeed.value);
-          document.getElementById('ui-anim-speed-val').textContent = this.speed.toFixed(2) + 'x';
+          this.ui.animSpeedVal.textContent = this.speed.toFixed(2) + 'x';
         });
       },
 
@@ -254,89 +280,70 @@
       },
 
       _setupAnimations: function (mesh) {
-        // glTF animations は A-Frame の gltf-model が読み込んだ model に入ることが多い
-        // ただし A-Frame の実装/素材によって e.detail.model.animations or mesh.animations の場合あり
-        const animations = mesh.animations || (mesh.userData && mesh.userData.gltfExtensions && []) || [];
-        // A-Frame/three側で animations が無い場合でも、el.getObject3D('mesh') 側を覗く
         const object3D = this.el.getObject3D('mesh');
-        const clips = (object3D && object3D.animations && object3D.animations.length) ? object3D.animations
-                    : (animations && animations.length) ? animations
-                    : [];
+        const clips = (object3D && object3D.animations && object3D.animations.length)
+          ? object3D.animations
+          : (mesh && mesh.animations && mesh.animations.length)
+            ? mesh.animations
+            : [];
 
         this.clips = clips;
 
-        // UIへ反映
-        const select = this.ui.animSelect;
-        select.innerHTML = ''; // reset
-
+        // UI反映
+        this.ui.animSelect.innerHTML = '';
         if (!this.clips.length) {
           this.ui.animWrap.style.display = 'none';
           return;
         }
 
         this.ui.animWrap.style.display = 'block';
-
         this.mixer = new THREE.AnimationMixer(object3D || mesh);
 
         this.clips.forEach((clip, i) => {
           const opt = document.createElement('option');
           opt.value = i;
           opt.textContent = clip.name ? clip.name : `Animation ${i+1}`;
-          select.appendChild(opt);
+          this.ui.animSelect.appendChild(opt);
         });
 
-        // 最初のアニメを自動選択して停止状態で準備
-        this._playClipByIndex(0, /*autoplay*/ false);
+        // 0番を選択して停止状態で準備
+        this._playClipByIndex(0, false);
         this._setAnimStatus('停止（選択済み）');
       },
 
-      _playClipByIndex: function (index, autoplay = true) {
+      _playClipByIndex: function (index, autoplay) {
         if (!this.mixer || !this.clips.length) return;
-
         const clip = this.clips[index];
         if (!clip) return;
 
-        // 既存アクション停止
-        if (this.activeAction) {
-          this.activeAction.stop();
-        }
+        if (this.activeAction) this.activeAction.stop();
 
         this.activeAction = this.mixer.clipAction(clip);
         this.activeAction.reset();
-        this.activeAction.clampWhenFinished = true;
         this.activeAction.loop = THREE.LoopRepeat;
 
-        // 再生/停止
+        this.activeAction.play();
         if (autoplay) {
           this.isPlaying = true;
-          this.activeAction.play();
+          this.activeAction.paused = false;
           this._setAnimStatus('再生中');
         } else {
           this.isPlaying = false;
-          this.activeAction.play();
-          this.activeAction.paused = true; // 準備だけ
+          this.activeAction.paused = true;
         }
 
-        // 先頭へ
         this.mixer.setTime(0);
       },
 
-      _setAnimStatus: function (text) {
-        if (this.ui.animStatus) this.ui.animStatus.textContent = text;
+      _setAnimStatus: function (t) {
+        this.ui.animStatus.textContent = t;
       }
     });
 
-    // マーカー検出でロード表示を消す（モデルがまだでもヒント用）
     window.addEventListener('DOMContentLoaded', () => {
       const marker = document.getElementById('marker');
       const loader = document.getElementById('loader');
-      marker.addEventListener('markerFound', () => {
-        // モデル読込完了は model-loaded 側で消すが、ここでヒント更新してもOK
-        loader.textContent = 'モデル読み込み中…';
-      });
-      marker.addEventListener('markerLost', () => {
-        // 必要なら何か表示したい場合に使える
-      });
+      marker.addEventListener('markerFound', () => { loader.textContent = 'モデル読み込み中…'; });
     });
   </script>
 </head>
@@ -344,35 +351,45 @@
 <body>
   <div id="loader" class="loader">Loading…（カメラ許可→マーカーを映してください）</div>
 
-  <!-- UIオーバーレイ -->
+  <!-- UI 表示/非表示ボタン（右下固定） -->
+  <button id="ui-toggle" class="ui-toggle" type="button">操作UIを隠す</button>
+
+  <!-- UI（下部に移動） -->
   <div id="ui" class="ui">
-    <h2>モデル操作UI <span class="badge">AR</span></h2>
-
-    <div class="row">
-      <label>サイズ</label>
-      <input id="ui-scale" type="range" min="0.1" max="5.0" step="0.01" value="1.0" />
+    <div class="ui-head">
+      <h2>操作UI <span class="badge">下部</span></h2>
+      <span class="hint">UI外：ドラッグ回転／ピンチ拡大縮小</span>
     </div>
 
-    <div class="row">
-      <label>回転X</label>
-      <input id="ui-rotx" type="range" min="-3.1416" max="3.1416" step="0.01" value="0" />
-    </div>
-    <div class="row">
-      <label>回転Y</label>
-      <input id="ui-roty" type="range" min="-3.1416" max="3.1416" step="0.01" value="0" />
-    </div>
-    <div class="row">
-      <label>回転Z</label>
-      <input id="ui-rotz" type="range" min="-3.1416" max="3.1416" step="0.01" value="0" />
-    </div>
+    <div class="grid">
+      <div class="row">
+        <label>サイズ</label>
+        <input id="ui-scale" type="range" min="0.1" max="5.0" step="0.01" value="1.0" />
+      </div>
 
-    <div class="row">
-      <label>自動回転</label>
-      <input id="ui-autorotate" type="checkbox" />
-    </div>
+      <div class="row">
+        <label>自動回転</label>
+        <input id="ui-autorotate" type="checkbox" />
+      </div>
 
-    <div class="btns">
-      <button id="ui-reset" type="button">リセット</button>
+      <div class="row">
+        <label>回転X</label>
+        <input id="ui-rotx" type="range" min="-3.1416" max="3.1416" step="0.01" value="0" />
+      </div>
+
+      <div class="row">
+        <label>回転Y</label>
+        <input id="ui-roty" type="range" min="-3.1416" max="3.1416" step="0.01" value="0" />
+      </div>
+
+      <div class="row">
+        <label>回転Z</label>
+        <input id="ui-rotz" type="range" min="-3.1416" max="3.1416" step="0.01" value="0" />
+      </div>
+
+      <div class="btns" style="margin:6px 0 0;">
+        <button id="ui-reset" type="button">リセット</button>
+      </div>
     </div>
 
     <!-- アニメUI：アニメがある時だけ表示 -->
@@ -383,19 +400,16 @@
       <div class="btns" style="margin-top:8px;">
         <button id="ui-anim-play" type="button">再生</button>
         <button id="ui-anim-stop" type="button">停止</button>
-        <span style="font-size:12px; opacity:.85; align-self:center;">状態：<span id="ui-anim-status">-</span></span>
+        <span style="font-size:12px; opacity:.85; align-self:center;">
+          状態：<span id="ui-anim-status">-</span>
+        </span>
       </div>
 
-      <div class="row" style="margin-top:10px;">
+      <div class="row" style="margin-top:8px;">
         <label>速度</label>
         <input id="ui-anim-speed" type="range" min="0.1" max="3.0" step="0.05" value="1.0" />
       </div>
-      <div class="hint">速度：<span id="ui-anim-speed-val">1.00x</span> / ※GLBにアニメが無い場合、この欄は表示されません。</div>
-    </div>
-
-    <div class="hint" style="margin-top:10px;">
-      ・画面タッチ：ドラッグ回転／ピンチ拡大縮小（UI外で操作）<br>
-      ・UIのつまみ：正確な調整用
+      <div class="hint">速度：<span id="ui-anim-speed-val">1.00x</span></div>
     </div>
   </div>
 
@@ -412,7 +426,6 @@
     </a-assets>
 
     <a-marker id="marker" type="pattern" url="assets/marker.patt" emitevents="true">
-      <!-- 見えない対策（ライト） -->
       <a-entity light="type: ambient; intensity: 1.0"></a-entity>
       <a-entity light="type: directional; intensity: 0.8" position="1 2 1"></a-entity>
 
@@ -431,3 +444,4 @@
   </a-scene>
 </body>
 </html>
+
